deploy/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: luksamuk/minerva_frontend:0.1.0
          ports:
            - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      app: frontend
