deploy/mongoexpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
spec:
  template:
    metadata:
      name: mongoexpress
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: mongoexpress-container
          image: mongo-express:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
