deploy/pgadmin-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin-statefulset
spec:
  serviceName: pgadmin-svc
  template:
    metadata:
      name: pgadmin
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin-container
          image: dpage/pgadmin4:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: pgadmin
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-configmap
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-pvc
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
