deploy/postgresql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
spec:
  template:
    metadata:
      name: postgresql
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql-container
          image: postgres:14
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-pv
          ports:
            - containerPort: 5432
      volumes:
        - name: postgresql-pv
          persistentVolumeClaim:
            claimName: postgresql-pvc
  selector:
    matchLabels:
      app: postgresql
