deploy/rest-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-deployment
spec:
  template:
    metadata:
      name: rest
      labels:
        app: rest
    spec:
      containers:
        - name: rest-container
          image: luksamuk/minerva_rest:0.2.2
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 15m
  replicas: 2
  selector:
    matchLabels:
      app: rest
