deploy/session-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-deployment
spec:
  template:
    metadata:
      name: session
      labels:
        app: session
    spec:
      containers:
        - name: session-container
          image: luksamuk/minerva_session:0.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9011
          resources:
            requests:
              cpu: 10m
  replicas: 2
  selector:
    matchLabels:
      app: session
