deploy/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  template:
    metadata:
      name: user
      labels:
        app: user
    spec:
      containers:
        - name: user-container
          image: luksamuk/minerva_user:0.2.2
          ports:
            - containerPort: 9010
          resources:
            requests:
              cpu: 10m
  replicas: 2
  selector:
    matchLabels:
      app: user
