deploy/users-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  template:
    metadata:
      name: users
      labels:
        app: users
    spec:
      containers:
        - name: users-container
          image: luksamuk/minerva_users:0.2.1
          ports:
            - containerPort: 9010
          resources:
            requests:
              cpu: 10m
  replicas: 2
  selector:
    matchLabels:
      app: users
