deploy/rediscommander-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rediscommander-svc
spec:
  type: NodePort
  selector:
    app: rediscommander
  ports:
    - port: 8081
      nodePort: 31086
