deploy/users-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: users-svc
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - port: 9010
